--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="shortcut icon"
+      type="image/jpg"
+      href="/src/assets/podcast-icon-removebg-preview.png"
+    />
   </head>
   <body>
     <div id="root"></div>
